<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Benzin Rechner</string>
    <string name="label_kilometers">Kilometer:</string>
    <string name="edit_kilometers">Gefahrene Kilometer</string>
    <string name="label_liters">Liter:</string>
    <string name="edit_liters">Getankte Liter</string>
    <string name="label_date">Datum:</string>
    <string name="button_calculate">Berechnen</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_deleteDatabase">Datenbank zurücksetzen</string>
    <string name="menu_showUsageList">Verbrauchsliste anzeigen</string>
    <string name="menu_exportXML">Liste exportieren (XML)</string>
    <string name="menu_deleteList">Einträge löschen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Ihr Verbrauch</string>
    <string name="button_calcNew">Neu berechnen</string>
    <string name="save_usage">Verbrauch speichern</string>
    <string name="old_usage_default">0.00</string>
    <string name="saved">Gespeichert</string>
    <string name="smiley">Smiley</string>
    <string name="button_abortAction">Abbrechen</string>
    <string name="button_confirmAction">OK</string>
    <string name="title_reset_database">Datenbank zurücksetzen</string>
    <string name="reset_database_text">Wollen Sie die Datenbank wirklich zurücksetzen? Dadurch werden alle Werte gelöscht.</string>
    <string name="database_reset">Datenbank zurückgesetzt.</string>
    <string name="warning_dialog_title">Warnung</string>
    <string name="invalid_input_message">Sie haben ungültige Daten eingegeben. Bitte geben Sie nur Werte an, die größer 0 sind.</string>
    <string name="close">Schließen</string>
    <string name="title_usage_list">Verbrauchsliste</string>
    <string name="string_liters">Liter</string>
    <string name="average_usage_text">Durchschnittlicher Verbrauch auf 100 Kilometer: \u0020 </string>
    <string name="current_usage_text">Ihr Verbrauch auf 100 Kilometern: \u0020 </string>
    <string name="average_usage_not_displayed">Ihr Durchschnittsverbrauch kann noch nicht angezeigt werden, da erst ein Tankvorgang erfasst wurde.</string>
    <string name="old_usage_text">Verbrauch beim letzten Mal auf 100 Kilometern: \u0020 </string>
    <string name="simple_date_format_pattern">dd.MM.yyyy</string>
    <string name="menu_delete_entry">Eintrag löschen</string>
    <string name="contextmenu_title">Mögliche Aktionen</string>
    <string name="delete_existing_entries">Bereits vorhandene Einträge löschen?</string>
    <string name="title_import">Datenimport</string>
    <string name="button_yes">Ja</string>
    <string name="button_no">Nein</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="confirm_delete">Löschen bestätigen</string>
    <string name="delete_entry_question">Möchten Sie diesen Eintrag wirklich löschen?</string>
    <string name="error_write_xml">Fehler beim Schreiben der XML-Datei</string>
    <string name="list_exported">Liste exportiert nach \u0020</string>
    <string name="empty_list">Liste enthält keine Daten. Export wurde abgebrochen.</string>
    <string name="import_failure">Es ist ein Fehler aufgetreten. Import wurde abgebrochen.</string>
    <string name="import_success">Es wurden %1$s Einträge erfolgreich importiert.</string>
    <string name="title_usage_delete_list">Einträge löschen</string>
    <string name="title_file_chooser_list">Dateiauswahl</string>
    <string name="delete">Löschen</string>
    <string name="cancel_short">Abbr.</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete_entries_notification">Alle gewählten Einträge werden gelöscht.</string>
    <string name="title_activity_usage_report">Verbrauchsauswertung</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_showUsageReport">Auswertung anzeigen</string>
    <string name="date">Datum</string>
    <string name="liters">Liter</string>
    <string name="kilometers">km</string>
    <string name="usage">Verbrauch/100 km</string>
    <string name="average_usage">Durchschnittsverbrauch /100 km</string>
    <string name="title_activity_chart">Verbrauchsauswertung</string>
    <string name="menu_showUsageChart">Grafische Auswertung</string>
    <string name="parentDirectory">Oberverzeichnis</string>
    <string name="folder">Verzeichnis</string>
    <string name="fileSize">Dateigröße</string>
    <string name="currentDir">Aktuelles Verzeichnis</string>
    <string name="menu_importXML">Liste importieren (XML)</string>

</resources>